--- a/data/main.html
+++ b/data/main.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8;"/>
-        <title> PLC_Web </title>
+        <title> Nalivator </title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
