--- a/data/main.html
+++ b/data/main.html
@@ -10,7 +10,7 @@
         <div class="load" id="load_frame"></div>
         <div class="load_txt" id="load_text">Loading...</div>
         <div class="load hidden" id="connect_frame"></div>
-        <div class="load_txt hidden" id="connect_text">Connecting...</div>
+        <div class="load_txt hidden" id="connect_text">Connecting</div>
         <div id="mainW">
             <table>
                 <tr>
