--- a/data/setting.html
+++ b/data/setting.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         Setting
+        <div style="position: absolute; top:0; left:0;"><input style="width:10vw; height:10vh" type="button" value="exit" onclick="logout()"></div>
     </body>
 </html>
