--- a/data/main.html
+++ b/data/main.html
@@ -239,41 +239,41 @@
             </table>
         </div>
         <div id="recordW" class="hidden">
-            <table style="text-align: left; margin-left: 4vw;">
-                <tr style="height:5vh;">
+            <table class="recordTable">
+                <tr>
                     <td>
-                        <select id="chartCar" style="height:5vh; width: 90vw; font-size: 4vh;" onchange="setCar(this.value)">
+                        <select id="chartCar" class="recordSelector" onchange="setCar(this.value)">
                             <option value="empty" disabled selected hidden>Виберіть машину</option>
                         </select>
                     </td>
                 </tr>
-                <tr style="height:5vh;">
+                <tr>
                     <td>
-                        <select disabled id="chartSection" style="height:5vh; width: 90vw; font-size: 4vh;" onchange="setSection(this.value)">
+                        <select disabled id="chartSection" class="recordSelector" onchange="setSection(this.value)">
                             <option value="empty" disabled selected hidden>Виберіть секцію</option>
                         </select>
                     </td>
                 </tr>
                 <tr style="height:5vh; ">
                     <td>
-                        <select disabled id="chartDate" style="height:5vh; width: 90vw; font-size: 4vh;" onchange="setDate(this.value);">
+                        <select disabled id="chartDate" class="recordSelector" onchange="setDate(this.value);">
                             <option value="empty" disabled selected hidden>Виберіть дату</option>
                         </select>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div id="chartDiv" style="width: 90vw; height: 57vh; top:21vh; background-color: white;"> </div>
+                        <div id="chartDiv" class="recordList"> </div>
                     </td>
                 </tr>
-                <tr style="height:5vh;">
+                <tr>
                     <td>
-                        <button onpointerdown="" class="setting">Обновити</button>
+                        <button onpointerdown="" class="record">Обновити</button>
                     </td>
                 </tr>
-                <tr style="height:5vh;">
+                <tr>
                     <td>
-                        <button onpointerdown="changeRecordWindow()" class="setting">Повернутися</button>
+                        <button onpointerdown="changeRecordWindow()" class="record">Повернутися</button>
                     </td>
                 </tr>
             </table>
