--- a/data/setting.html
+++ b/data/setting.html
@@ -7,6 +7,20 @@
     </head>
     <body>
         <div>
+            <table class="fontSize">
+                <tbody>
+                    <tr>
+                        <td>PLC IP:</td>
+                        <td><input maxlength="3" id="rIP0" class="short"></td>
+                        <td>.</td>
+                        <td><input maxlength="3" id="rIP1" class="short"></td>
+                        <td>.</td>
+                        <td><input maxlength="3" id="rIP2" class="short"></td>
+                        <td>.</td>
+                        <td><input maxlength="3" id="rIP3" class="short"></td>
+                    </tr>
+                </tbody>
+            </table>
             <div> Налаштування WiFi: </div>
             <table class="fontSize">
                 <tbody>
